--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "sms"
   ],
   "author": "Theodore Pochart",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "twilio": "^3.69.0",
+    "twilio-cli": "^2.31.0"
+  }
 }
